--- a/source/dataz/index.html
+++ b/source/dataz/index.html
@@ -28,6 +28,17 @@
         text-align: left;
       }
 
+      .metadata {
+        display: none;
+        opacity: 0.4;
+        font-size: 0.8rem;
+      }
+
+      .number {
+        font-family: monospace;
+        color: rgb(144, 111, 111);
+      }
+
       table {
         border-collapse: collapse;
       }
