--- a/source/dataz/index.html
+++ b/source/dataz/index.html
@@ -4,63 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      html,
-      body {
-        background: #222;
-        color: #ddd;
-        font-family: sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      pre {
-        margin: 0;
-      }
-      table {
-        width: 100%;
-      }
-      td:hover {
-        background-color: rgba(8, 128, 64, 0.1);
-      }
-      th {
-        font-size: 0.7rem;
-        opacity: 0.5;
-        text-align: left;
-      }
-
-      .metadata {
-        display: none;
-        opacity: 0.4;
-        font-size: 0.8rem;
-      }
-
-      .number {
-        font-family: monospace;
-        color: rgb(144, 111, 111);
-      }
-
-      table {
-        border-collapse: collapse;
-      }
-      table td,
-      table th {
-        border: 1px solid silver;
-      }
-      table tr:first-child th {
-        border-top: 0;
-      }
-      table tr:last-child td {
-        border-bottom: 0;
-      }
-      table tr td:first-child,
-      table tr th:first-child {
-        border-left: 0;
-      }
-      table tr td:last-child,
-      table tr th:last-child {
-        border-right: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="tablify.css">
   </head>
   <body>
     <div id="root"></div>
